--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- Секция с дашбордом Yandex DataLens -->
         <div class="section">
             <h2>Дашборд аналитики</h2>
-            <iframe src="https://datalens.yandex/ouuno23pnln29_embedded=1&_no_controls=1&_lang=ru&_theme=light" 
+            <iframe src="https://datalens.yandex/ouuno23pnln29?_embedded=1&_no_controls=1&_lang=ru&_theme=light" 
                     height="600px">
             </iframe>
         </div>
@@ -56,4 +56,5 @@
     </div>
 </body>
 </html>
+
 
