--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- Секция с дашбордом Yandex DataLens -->
         <div class="section">
             <h2>Дашборд аналитики</h2>
-            <iframe src="https://datalens.yandex/ouuno23pnln29?_embedded=true&_no_controls=1&_lang=ru&_theme=light" 
+            <iframe src="https://datalens.yandex/ouuno23pnln29" 
                 width="100%"    
                 height="600px"
                 frameborder="0"
@@ -59,6 +59,7 @@
     </div>
 </body>
 </html>
+
 
 
 
