--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- Секция с 3D моделью -->
         <div class="section">
             <h2>3D модель проекта</h2>
-            <iframe src="https://sketchfab.com/models/MODEL_ID/embed?autostart=1&ui_controls=1" 
+            <iframe src="https://docs.sgnl.pro/s/i/019a7c2b-f9a9-7232-9ef5-06c3ccd258cd" 
                     height="600px" 
                     allowfullscreen>
             </iframe>
@@ -59,6 +59,7 @@
     </div>
 </body>
 </html>
+
 
 
 
