--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
         <!-- Секция с дашбордом Yandex DataLens -->
         <div class="section">
             <h2>Дашборд аналитики</h2>
-            <iframe src="https://datalens.yandex/ouuno23pnln29" 
-                width="100%"    
+            <iframe src="https://docs.sgnl.pro/s/i/019a7c2b-f9a9-7232-9ef5-06c3ccd258cd" 
+                width="100%" 
                 height="600px"
                 frameborder="0"
                 allowfullscreen>
+</iframe>
             </iframe>
         </div>
         
@@ -59,6 +60,7 @@
     </div>
 </body>
 </html>
+
 
 
 
